@@ -1,2 +1,6 @@
 12/14/2007
 Version 0.1 - First public release.
+
+Trunk notes to be overwritten for next release:
+
+ADD Ant task for Javadocs
